--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
-{% set build = 1 %}
+{% set build = 0 %}
 {% set name = "lammps" %}
-{% set version = "patch_27Oct2021" %}
-{% set sha256 = "c06f682fcf9d5921ca90c857a104e90fba0fe65decaac9732745e4da49281938" %}
+{% set version = "patch_2June2022" %}
+{% set sha256 = "d06f682fcf9d5921ca90c857a104e90fba0fe65decaac9732745e4da49281938" %}
 {% set date = datetime.datetime.strptime(version.split('_')[1], "%d%b%Y") %}
 {% set conda_version = "{:%Y.%m.%d}".format(date) %}
 
@@ -11,7 +11,7 @@ package:
 
 source:
   - fn: {{ name }}-{{ conda_version }}.tar.gz
-    url: https://github.com/lammps/lammps/archive/{{ version }}.tar.gz
+    url: https://github.com/lammps/lammps/archive/refs/tags/{version}.tar.gz
     sha256: {{ sha256 }}
     patches: 
       - macos_install.patch
